# dbms-replication

./: CMakeLists.txt  README.md
include/nil/dbms/replication/: agency_collection_specification.hpp  agency_methods.hpp  logger_context.hpp  methods.hpp
include/nil/dbms/replication/cluster/: cluster_types.hpp
include/nil/dbms/replication/dbmsd/: dbmsd.hpp
include/nil/dbms/replication/exceptions/: participant_resigned_exception.hpp
include/nil/dbms/replication/metrics/: fwd.hpp
include/nil/replication/: agency_collection_specification.hpp  agency_methods.hpp  deferred_execution.hpp  logger_context.hpp  methods.hpp  version.hpp
include/nil/replication/exceptions/: participant_resigned_exception.hpp
include/nil/replication/log/: agency_log_specification.hpp  agency_specification_inspectors.hpp  algorithms.hpp  ilog_interfaces.hpp  inmemory_log.hpp  log_common.hpp  log_core.hpp  log_entries.hpp  log_follower.hpp  log_leader.hpp  log_status.hpp  log_unconfigured_participant.hpp  network_attached_follower.hpp  network_messages.hpp  participants_health.hpp  persisted_log.hpp  replicated_log.hpp  replicated_log_feature.hpp  replicated_log_iterator.hpp  replicated_log_metrics.hpp  replicated_log_metrics_declarations.hpp  supervision.hpp  supervision_action.hpp  supervision_context.hpp  types.hpp  utilities.hpp  wait_for_bag.hpp
include/nil/replication/state/: agency_specification.hpp  follower_state_manager.hpp  follower_state_manager.tpp  leader_state_manager.hpp  leader_state_manager.tpp  replicated_state.hpp  replicated_state.tpp  replicated_state_feature.hpp  replicated_state_token.hpp  replicated_state_traits.hpp  state_common.hpp  state_interfaces.hpp  state_status.hpp  supervision.hpp  supervision_action.hpp  unconfigured_state_manager.hpp  unconfigured_state_manager.tpp  update_replicated_state.hpp
include/nil/replication/streams/: log_multiplexer.hpp  log_multiplexer.tpp  multiplexed_values.hpp  stream_information_block.hpp  stream_information_block.tpp  streams.hpp  streams.tpp
include/nil/replication/supervision/: modify_context.hpp
include/nil/replication_sdk/: agency_collection_specification.hpp  agency_methods.hpp  deferred_execution.hpp  methods.hpp  version.hpp
include/nil/replication_sdk/cluster/: cluster_types.hpp
include/nil/replication_sdk/dbmsd/: dbmsd.hpp
include/nil/replication_sdk/exceptions/: participant_resigned_exception.hpp
include/nil/replication_sdk/replicated_log/: agency_log_specification.hpp  agency_specification_inspectors.hpp  algorithms.hpp  ilog_interfaces.hpp  inmemory_log.hpp  log_common.hpp  log_core.hpp  log_entries.hpp  log_follower.hpp  log_leader.hpp  log_status.hpp  log_unconfigured_participant.hpp  network_attached_follower.hpp  network_messages.hpp  participants_health.hpp  persisted_log.hpp  replicated_log.hpp  replicated_log_feature.hpp  replicated_log_iterator.hpp  replicated_log_metrics.hpp  supervision.hpp  supervision_action.hpp  supervision_context.hpp  types.hpp  utilities.hpp
include/nil/replication_sdk/replicated_state/: agency_specification.hpp  follower_state_manager.hpp  follower_state_manager.tpp  leader_state_manager.hpp  leader_state_manager.tpp  replicated_state.hpp  replicated_state.tpp  replicated_state_feature.hpp  replicated_state_token.hpp  replicated_state_traits.hpp  state_common.hpp  state_interfaces.hpp  state_status.hpp  supervision.hpp  supervision_action.hpp  unconfigured_state_manager.hpp  unconfigured_state_manager.tpp  update_replicated_state.hpp
include/nil/replication_sdk/streams/: log_multiplexer.hpp  log_multiplexer.tpp  multiplexed_values.hpp  stream_information_block.hpp  stream_information_block.tpp  stream_specification.hpp  streams.hpp  streams.tpp
include/nil/replication_sdk/supervision/: modify_context.hpp
src/: agency_collection_specification.cpp  agency_methods.cpp  methods.cpp  version.cpp
src/log/: agency_log_specification.cpp  agency_specification_inspectors.cpp  algorithms.cpp  inmemory_log.cpp  log_common.cpp  log_core.cpp  log_entries.cpp  log_follower.cpp  log_interfaces.cpp  log_leader.cpp  log_status.cpp  log_unconfigured_participant.cpp  network_attached_follower.cpp  network_messages.cpp  replicated_log.cpp  replicated_log_feature.cpp  replicated_log_metrics.cpp  supervision.cpp  supervision_action.cpp  types.cpp  wait_for_bag.cpp
src/replicated_log/: agency_log_specification.cpp  agency_specification_inspectors.cpp  algorithms.cpp  inmemory_log.cpp  log_common.cpp  log_core.cpp  log_entries.cpp  log_interfaces.cpp  log_status.cpp  network_messages.cpp  supervision_action.cpp  types.cpp  wait_for_bag.cpp
src/replicated_state/: agency_specification.cpp  replicated_state_feature.cpp  replicated_state_token.cpp  state_common.cpp  state_status.cpp  update_replicated_state.cpp
src/state/: agency_specification.cpp  replicated_state_feature.cpp  replicated_state_token.cpp  state_common.cpp  state_status.cpp  supervision.cpp  supervision_action.cpp  update_replicated_state.cpp
src/state_machines/black_hole/: black_hole_state_machine.cpp  black_hole_state_machine_feature.cpp
src/state_machines/document/: document_state_machine.cpp  document_state_machine_feature.cpp
src/state_machines/prototype/: prototype_core.cpp  prototype_follower_state.cpp  prototype_leader_state.cpp  prototype_log_entry.cpp  prototype_state_machine.cpp  prototype_state_machine_feature.cpp  prototype_state_methods.cpp
test/: CMakeLists.txt  index.cpp
test/mocks/: fake_failure_oracle.cpp  fake_failure_oracle.hpp  fake_replicated_log.cpp  fake_replicated_log.hpp  mock_state_persistor_interface.cpp  mock_state_persistor_interface.hpp  persisted_log.cpp  persisted_log.hpp  replicated_log_metrics_mock.cpp  replicated_log_metrics_mock.hpp
test/replicated_log/: inmemory_log.cpp  test_helper.cpp  test_helper.hpp
test/replicated_state/: prototype_state_machine.cpp
(+85 files in other folders)
